--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Jacob Ernst <akumadude.je@gmail.com>",
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-manifest": "^2.2.25",
@@ -19,7 +20,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
