Fixing conflicting config in ".eslintrc.json" and adding formatting and linting to "package.json" scripts section

--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format:js": "yarn run eslint --fix --ext .js src/",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "lint:js": "yarn run eslint --ext .js src/"
   }
 }
