--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,6 @@ jobs:
     - uses: actions/cache@v1
       with:
         path: node_modules
-        key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.json') }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
     - run: yarn install
     - run: yarn lint:js
