--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,12 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: '12.x'
-    - uses: actions/cache@v1
+    - name: Caching node modules
+      id: modules-cache
+      uses: actions/cache@v1
       with:
         path: node_modules
         key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
     - run: yarn install
+      if: !steps.modules-cache.outputs.cache-hit
     - run: yarn lint:js
