WIP attempting to fix misconfiguration of "if" statement in workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,5 @@ jobs:
         path: node_modules
         key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
     - run: yarn install
-      if: !steps.modules-cache.outputs.cache-hit
+      if: steps.modules-cache.outputs.cache-hit == false
     - run: yarn lint:js
