--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -16,11 +16,14 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: '12.x'
-    - uses: actions/cache@v1
+    - name: Caching node modules
+      id: modules-cache-staging
+      uses: actions/cache@v1
       with:
         path: node_modules
         key: ${{ runner.os }}-node-prod-${{ hashFiles('**/yarn.lock') }}
     - run: yarn install
+      if: steps.modules-cache-staging.outputs.cache-hit == false
     - run: yarn build
     - name: Publish
       uses: cloudflare/wrangler-action@1.0.0
