--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -21,7 +21,7 @@ jobs:
       uses: actions/cache@v1
       with:
         path: node_modules
-        key: ${{ runner.os }}-node-prod-${{ hashFiles('**/yarn.lock') }}
+        key: ${{ runner.os }}-node-prod-${{ hashFiles('yarn.lock') }}
     - run: yarn install
       if: steps.modules-cache-production.outputs.cache-hit == false
     - run: yarn build
