WIP attempting to fix "wrangler" config

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,11 +7,13 @@ workers_dev = true
 name = "jacob-software-staging"
 route = "staging.jacob.software/*"
 zone_id = "ca5de4ef1b5ee3ee7e7db73fb04b6bd0"
+workers_dev = false
 
 [env.production]
 name = "jacob-software"
 route = "jacob.software/*"
 zone_id = "ca5de4ef1b5ee3ee7e7db73fb04b6bd0"
+workers_dev = false
 
 [site]
 bucket = "./public"
