Attempting to ignore "master" and "develop"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,8 @@ name: Test
 on:
   push:
     branches-ignore:
-      - 'origin/master'
-      - 'origin/develop'
+      - '**/master'
+      - '**/develop'
 
 jobs:
   lint:
