--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "author": "Jacob Ernst <akumadude.je@gmail.com>",
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@fullhuman/postcss-purgecss": "^2.0.5",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-manifest": "^2.2.25",
@@ -14,7 +14,7 @@
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.34",
     "gatsby-source-filesystem": "^2.1.35",
-    "gatsby-source-prismic-graphql": "^3.3.1",
+    "gatsby-source-prismic-graphql": ">=3.4.1-alpha",
     "gatsby-transformer-sharp": "^2.3.1",
     "node-sass": "^4.13.0",
     "postcss-preset-env": "^6.7.0",
@@ -33,10 +33,10 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "prettier": "^1.18.2",
-    "stylelint": "^12.0.0",
-    "stylelint-config-prettier": "^6.0.0",
+    "stylelint": "^13.0.0",
+    "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-recommended-scss": "^4.1.0",
-    "stylelint-order": "^3.1.1",
+    "stylelint-order": "^4.0.0",
     "stylelint-prettier": "^1.1.1",
     "stylelint-scss": "^3.13.0"
   },
