--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,8 @@ name: Test
 on:
   push:
     branches-ignore:
-      - '**/master'
-      - '**/develop'
+      - master
+      - develop
 
 jobs:
   lint:
