--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.34",
     "gatsby-source-filesystem": "^2.1.35",
-    "gatsby-source-prismic-graphql": ">=3.4.1-alpha",
+    "gatsby-source-prismic-graphql": "3.4.0-beta.2",
     "gatsby-transformer-sharp": "^2.3.1",
     "node-sass": "^4.13.0",
     "postcss-preset-env": "^6.7.0",
