triggering workflow on open pr

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
     branches-ignore:
       - master
       - develop
+  pull-request:
+    branches:
+      - master
+      - develop
 
 jobs:
   lint:
