--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
     branches-ignore:
       - master
       - develop
-  pull-request:
+  pull_request:
     branches:
       - master
       - develop
