Adding linting for CSS to testing workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,4 @@ jobs:
     - run: yarn install
       if: steps.modules-cache.outputs.cache-hit == false
     - run: yarn lint:js
+    - run: yarn lint:css
