--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,12 @@ jobs:
       with:
         path: node_modules
         key: ${{ runner.os }}-node-${{ hashFiles('yarn.lock') }}
+    - name: Caching node modules
+      id: stylelint-cache
+      uses: actions/cache@v1
+      with:
+        path: ./stylelintcache
+        key: ${{ runner.os }}-stylelint-${{ hashFiles('src/**/*.scss') }}
     - run: yarn install
       if: steps.modules-cache.outputs.cache-hit == false
     - run: yarn lint:js
