--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "stylelint": "^13.0.0",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-recommended-scss": "^4.1.0",
-    "stylelint-order": "^4.0.0",
     "stylelint-prettier": "^1.1.1",
     "stylelint-scss": "^3.13.0"
   },
@@ -48,11 +47,11 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format:js": "eslint --fix --ext .js src/",
-    "format:css": "stylelint --fix 'src/**/*.scss'",
+    "format:css": "stylelint 'src/**/*.scss' --fix --cache --cache-location \"./.stylelintcache/\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "lint:js": "eslint --ext .js src/",
-    "lint:css": "stylelint 'src/**/*.scss'"
+    "lint:css": "stylelint 'src/**/*.scss' --cache --cache-location \"./.stylelintcache/\""
   }
 }
