--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         path: node_modules
         key: ${{ runner.os }}-node-${{ hashFiles('yarn.lock') }}
-    - name: Caching node modules
+    - name: Caching stylelint
       id: stylelint-cache
       uses: actions/cache@v1
       with:
